--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ textarea {
   
   /* Uniform text field size */
   width: 300px;
+  height: 100px;
   box-sizing: border-box;
 
   /* Match form field borders */
